# RePORTaLiN-MCP

./: .claude.json.example  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  claude_desktop_config.example.json  llms.txt  pyproject.toml
.github/workflows/: auto-version-bump.yml  ci.yml  release.yml  security.yml
agents/: lexicographer.py  redactor.py
data/raw/: README.md
data/raw/Indo-vap_csv_files/: 101_HHC_Recontact_1.xlsx  10_TST.xlsx  11_IGRA.xlsx  12A_FUA.xlsx  12B_FUB.xlsx  13_TxCompliance.xlsx  14_CaseControl.xlsx  14_Case_Control.xlsx  15_Feces.xlsx  16_Helminth.xlsx  17_EligConfirmation.xlsx  18_1_TargConcom.xlsx  18_2_TargConcom.xlsx  18_NonConsent.xlsx  19_Smear.xlsx  1A_ICScreening.xlsx  1B_HCScreening.xlsx  20_CoEnroll.xlsx  21_DSTISO.xlsx  21_DSTIsolate.xlsx  2A_ICBaseline.xlsx  2A_ICBaseline_1.xlsx  2B_HCBaseline.xlsx  30_Air_Quality.xlsx  3_Specimen_Collection.xlsx  4_Smear.xlsx  53_exposure.xlsx  5_CBC.xlsx  6_HIV.xlsx  7_Culture.xlsx  8_CXR.xlsx  95_SAE.xlsx  95_Specimen_Tracking.xlsx  96_Specimen_Tracking.xlsx  97_Not_Collected.xlsx  98A_FOA.xlsx  98B_FOB.xlsx  99A_FSA.xlsx  99B_FSB.xlsx  9_EEval.xlsx  (+2 more)
data/raw/data_dictionary_and_mapping_specifications/: RePORT_DEB_to_Tables_mapping.xlsx
docker/: Dockerfile  docker-compose.yml
docs/: BEST_PRACTICES.md  BEST_PRACTICES_ENFORCEMENT_AUDIT.md  CONFIGURATION.md  DATA_PIPELINE.md  IMPLEMENTATION_PLAN.md  LOGGING_ARCHITECTURE.md  MCP_SERVER_SETUP.md  QUICK_REFERENCE.md  TESTING_GUIDE.md
docs/adr/: 0001-use-fastmcp-for-mcp-server.md  0002-aes-256-gcm-over-fernet.md  0003-structlog-for-logging.md  README.md  template.md
examples/client/: __init__.py  basic_usage.py  query_clinical_data.py
examples/config/: claude_desktop_config.example.json  claude_desktop_config.local.json
scripts/: configure_claude_code.py  generate_claude_config.py  run_agent.sh
src/reportalin/: __init__.py  __main__.py  logging.py
src/reportalin/cli/: pipeline.py  verify.py
src/reportalin/client/: __init__.py  __main__.py  agent.py  mcp_client.py  react_rag_agent.py  universal_client.py
src/reportalin/core/: __init__.py  config.py  constants.py  exceptions.py  log_decryptor.py  logging.py
src/reportalin/data/: __init__.py  load_dataset_headers.py  load_dictionary.py
src/reportalin/data/utils/: logging.py
src/reportalin/server/: __init__.py  __main__.py  auth.py  main.py
src/reportalin/server/security/: __init__.py  encryption.py  middleware.py  rate_limiter.py
src/reportalin/server/tools/: __init__.py  _loaders.py  _models.py  combined_search.py  dataset_headers.py  prompt_enhancer.py  registry.py  search.py
src/reportalin/types/: models.py
tests/: __init__.py  conftest.py
tests/integration/: test_mcp_client.py  test_server_startup.py  test_simple_server.py  test_tool_call.py
tests/unit/: test_config.py  test_mcp_client.py  test_mcp_server.py  test_server.py
