# =============================================================================
# RePORTaLiN MCP System - UV-Compatible Project Configuration
# =============================================================================
# This pyproject.toml is optimized for use with `uv` package manager
# Run: uv sync --all-extras to install all dependencies
# =============================================================================

[project]
name = "reportalin-mcp"
# Version is AUTOMATICALLY derived from git tags via setuptools-scm
# DO NOT manually set version here - use: git tag v0.3.0
dynamic = ["version"]
description = "Smart variable discovery MCP server with 3 tools: combined_search (primary), search (dictionary), list_dataset_headers (datasets) - for RePORT India TB research"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "RePORTaLiN Team" }
]
keywords = [
    "mcp",
    "model-context-protocol",
    "data-dictionary",
    "variable-discovery",
    "research-metadata",
    "tuberculosis",
    "clinical-research",
    "agentic-ai"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: FastAPI",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Typing :: Typed",
]

# -----------------------------------------------------------------------------
# Core Dependencies
# -----------------------------------------------------------------------------
dependencies = [
    # MCP SDK with CLI support (v1.26.0+ for latest features)
    "mcp[cli]>=1.26.0,<2.0.0",
    # Web framework (for HTTP transport)
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.32.0,<1.0.0",
    # Data validation
    "pydantic>=2.0.0,<3.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    # Structured logging
    "structlog>=24.0.0,<25.0.0",
    # Environment management
    "python-dotenv>=1.0.0,<2.0.0",
    # CLI enhancements
    "typer>=0.12.0,<1.0.0",
    "rich>=13.0.0,<14.0.0",
    "argcomplete>=3.0.0,<4.0.0",
    "ruff>=0.14.0",
    # Data processing (required for dictionary loading)
    "pandas>=2.0.0,<3.0.0",
    "openpyxl>=3.1.0,<4.0.0",
    "tqdm>=4.66.0,<5.0.0",
]

# -----------------------------------------------------------------------------
# Optional Dependencies
# -----------------------------------------------------------------------------
[project.optional-dependencies]
# Development tools
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.27.0",  # Async HTTP client for testing
    "hypothesis>=6.100.0",  # Property-based testing
    "black>=24.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "pre-commit>=3.8.0",
    "commitizen>=3.29.0",
    # Security scanning tools
    "bandit[sarif]>=1.7.0",
    "pip-audit>=2.7.0",
    "safety>=3.0.0",
]

# Data preparation (optional - for generating JSONL files from Excel)
data-prep = [
    "pandas>=2.0.0,<3.0.0",
    "openpyxl>=3.1.0,<4.0.0",
    "tqdm>=4.66.0,<5.0.0",
]

# Documentation
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]

# All extras combined
all = [
    "reportalin-mcp[dev,docs]",
]

# Entry Points
# -----------------------------------------------------------------------------
[project.scripts]
reportalin-mcp = "reportalin.server.__main__:main"

# -----------------------------------------------------------------------------
# Build System
# -----------------------------------------------------------------------------
[build-system]
# setuptools-scm: Automatic versioning from git tags (2026 best practice)
requires = ["setuptools>=80", "setuptools-scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[tool.hatch.build.targets.wheel]
packages = ["src/reportalin"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.hatch.build.targets.sdist]
# Exclude backward-compatibility shims from source distribution
exclude = [
    "scripts/",
    "server/",
    "client/",
    "shared/",
]

# -----------------------------------------------------------------------------
# Dependency Groups (UV compatible)
# -----------------------------------------------------------------------------
[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "setuptools-scm[toml]>=9.2.2",
]

# -----------------------------------------------------------------------------
# Black Formatter
# -----------------------------------------------------------------------------
[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312', 'py313']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | __pycache__
)/
'''

# -----------------------------------------------------------------------------
# Ruff Linter
# -----------------------------------------------------------------------------
[tool.ruff]
line-length = 88
target-version = "py310"
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # Line too long (handled by black)
    "B008",   # Do not perform function calls in argument defaults
    "B904",   # Within an except clause, raise exceptions with raise ... from err
    "ARG001", # Unused function argument (common in handlers)
]

[tool.ruff.lint.isort]
known-first-party = ["reportalin"]

# -----------------------------------------------------------------------------
# MyPy Type Checker
# -----------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "mcp.*",
]
ignore_missing_imports = true

# -----------------------------------------------------------------------------
# Pytest Configuration
# -----------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
    "-p", "no:warnings",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "mcp: marks tests as MCP protocol tests",
]

# -----------------------------------------------------------------------------
# Coverage Configuration
# -----------------------------------------------------------------------------
[tool.coverage.run]
source = ["src/reportalin"]
branch = true
omit = [
    "*/__pycache__/*",
    "*/tests/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
show_missing = true

# -----------------------------------------------------------------------------
# Automatic Versioning (setuptools-scm)
# -----------------------------------------------------------------------------
[tool.setuptools_scm]
# Version derived from git tags (v0.3.0, v1.0.0, etc.)
# Recommended tag format: v{MAJOR}.{MINOR}.{PATCH}
# Examples: v0.3.0, v1.0.0, v1.0.0-rc1
#
# Create a new version:
#   git tag v0.4.0
#   git push origin v0.4.0
#
# Development versions automatically suffixed with .devN+hash
write_to = "src/reportalin/_version.py"
version_scheme = "python-simplified-semver"
local_scheme = "no-local-version"
fallback_version = "0.0.0+unknown"
